    Rename property killbill.osgi.analytics.blacklist to org.killbill.billing.plugin.analytics.blacklist
    Rename property org.killbill.billing.plugin.analytics.refresh.nb_threads to org.killbill.billing.plugin.analytics.refresh.nbThreads
    Rename property org.killbill.billing.plugin.analytics.dashboard.nb_threads to org.killbill.billing.plugin.analytics.dashboard.nbThreads
    Update to killbill-oss-parent 0.7.22

0.7.1
    Support for new payment APIs
    Update to killbill-oss-parent 0.7.15

0.7.0
    Iteration on Financial reports
    Support for usage APIs

0.6.0
    Change base package name to org.killbill.billing.plugin.analytics
    Change Maven coordinates to org.kill-bill.billing.plugin.java:analytics-plugin
    Update to killbill-oss-parent 0.5.29

0.5.13
    Improvements to the new SQL report API

0.5.12
    New revenue model reports
    New SQL report API, see http://docs.kill-bill.org/userguide.html#_dashboard_api
    Update to killbill-oss-parent 0.5.25

0.5.11
    Reports configuration bugfixes

0.5.10
    Make refreshes more robust in case of plugin failures

0.5.9
    Dashboard improvements

0.5.8
    Fix thread safety bug causing refreshes to fail intermittently
    Update to killbill-oss-parent 0.5.21 (DDL change)

0.5.7
    Update to killbill-oss-parent 0.5.17

0.5.6
    Fix incompatibility with latest jdbi version

0.5.5
    Update to killbill-oss-parent 0.5.13. This fixes an OSGI initialization error
    Update jdbi to 2.53

0.5.4
    Fix deletion of tags and custom fields
    Performance improvement (audits)
    Updates to the dashboarding system
    Update to killbill-oss-parent 0.5.9

0.5.3
    Fix default dates handling in dashboards (actual fix)
    Sanity queries: bug fixes, performance optimizations and new queries
    Fix duplicates in analytics_account_transitions

0.5.2
    Fix default dates handling in dashboards
    Fix typo in sanity queries
    Fix potential NPE in BusinessInvoiceItemUtils

0.5.1